@@ -1,12 +1,12 @@
-<!DOCTYPE html>{% load url from future %}
+<!DOCTYPE html>{% load url from future %}{% load admin_static %}
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>{% block pagetitle %}Rosetta{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <link rel="stylesheet" href="{{ADMIN_MEDIA_PREFIX}}css/base.css" type="text/css"/>
-    <link rel="stylesheet" href="{{ADMIN_MEDIA_PREFIX}}css/forms.css" type="text/css"/>
-    <link rel="stylesheet" href="{{ADMIN_MEDIA_PREFIX}}css/changelists.css" type="text/css"/>
+    <link rel="stylesheet" href="{% static "admin/css/base.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "admin/css/forms.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "admin/css/changelists.css" %}" type="text/css"/>
     <style type="text/css" media="screen">
         {% include 'rosetta/css/rosetta.css' %}
     </style>
