@@ -1,12 +1,5 @@
 #!/bin/bash
 
-if [ ! -d .venv_13 ]
-then
-    virtualenv --no-site-packages --distribute --python=python2 .venv_13
-    . .venv_13/bin/activate
-    pip install --use-mirrors Django==1.3 coverage python-memcached six requests==2.1.0
-    deactivate
-fi
 if [ ! -d .venv_14 ]
 then
     virtualenv --no-site-packages --distribute --python=python2 .venv_14
@@ -42,14 +35,6 @@ then
     pip install --use-mirrors coverage python3-memcached six  Django==1.6.1 requests==2.1.0
     deactivate
 fi
-
-. .venv_13/bin/activate
-cd testproject
-python manage.py --version
-python --version
-python manage.py test rosetta
-cd ..
-deactivate
 
 . .venv_14/bin/activate
 cd testproject
